Se agregan mensajes requeridos